tests/integration/error/parser_recovery_multiple_errors.alo
// expect-error: Expected ';' after statement, found 'return'

fun main() -> void {
    imut first: int = 1
    imut second: int = 2
    return;
}
